--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
+    "react-i18next": "^15.0.3",
     "react-icons": "^5.1.0",
     "react-id-swiper": "^4.0.0",
     "react-image-gallery": "^1.3.0",
