--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "feather-icons-react": "^0.7.0",
     "font-awesome": "^4.7.0",
     "google-maps-react": "^2.0.6",
+    "i18next": "^23.16.2",
     "jquery": "^3.7.1",
     "mini-css-extract-plugin": "^2.9.0",
     "owl.carousel": "^2.3.4",
@@ -57,6 +58,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
+    "react-i18next": "^15.0.3",
     "react-icons": "^5.1.0",
     "react-id-swiper": "^4.0.0",
     "react-image-gallery": "^1.3.0",
