--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-images": "^1.2.0-beta.7",
     "react-input-mask": "^2.0.4",
+    "react-localization": "^1.0.19",
     "react-owl-carousel": "^2.3.3",
     "react-phone-input-2": "^2.15.1",
     "react-photo-gallery": "^8.0.0",
